fix second section mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -704,6 +704,20 @@
 			text-align: center;
 		}
 	}
+	.three-featured-articles-block-container {
+		.acticle-container{
+			.hover-cat {
+				top: -17%;
+			}
+		}
+		.article-container.hovered{
+			filter: blur(0px);
+			scale: 1.9;
+			img{
+				transform: scale(1);
+			}
+		}
+	}
 }
 @media (max-width: 470px){
 	.message-for-editor-section{
